# interpreter

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  flake.nix  justfile
monkey/: 1_2.monkey  1_4.monkey  2_4_let.monkey  2_4_return.monkey
src/: lib.rs  main.rs  test_setup.rs  token.rs  tracing.rs  value.rs
src/app/: mod.rs
src/ast/: expression.rs  mod.rs  operators.rs  program.rs  statement.rs  tests.rs
src/eval/: builtins.rs  environment.rs  mod.rs  tests.rs
src/parser/: macros.rs  mod.rs  precedence.rs  tests.rs
src/tokenizer/: mod.rs  tests.rs
src/tokenizer/token/: kind.rs  mod.rs  span.rs
